<resources>
    <string name="app_name">My Clock</string>
    <string name="alarm_disp">alarm</string>
    <string name="timer_disp">timer</string>
    <string name="stopwatch_disp">stopwatch</string>
    <string name="clock_disp">clock</string>
    <string name="screensaver">Screensaver</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="help">Help</string>
    <string name="time_6">6:00</string>
    <string name="pm">PM</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date_today">Wed, 4th Apr</string>
    <string name="zero">0</string>
    <string name="time_zero">00</string>
    <string name="hr">h</string>
    <string name="min">m</string>
    <string name="sec">s</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="am">AM</string>
</resources>
